list: add RSS link at the bottom
While the link can be found in the page source, it's better to make it
explicit, highlighting its existence.

Inspired by the RSS link available on the Myhro Blog Archives[1].

[1]: https://blog.myhro.info/archives/

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -31,6 +31,7 @@
         {{ end }}
       </div>
     </small>
-    {{ end }}
+  {{ end }}
+  <p>Subscribe <a href="/index.xml">via RSS</a></p>
 </content>
 {{ end }}
